--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -25,6 +25,7 @@ jobs:
       - run: ls -R
       - run: ./myoutput/linux-amd64/yothere
       # - run: ./myoutput/darwin-amd64/yothere
+      - run: upx ./myoutput/darwin-amd64/yothere
       - run: echo "done"
       - uses: actions/upload-artifact@v2
         with:
