--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -4,8 +4,8 @@ on: workflow_dispatch
 
 jobs:
   test:
-    # runs-on: ubuntu-latest
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
+    # runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - run: pwd
@@ -23,8 +23,9 @@ jobs:
       - run: |
           CGO_ENABLED=0 gox -parallel=3 -output="myoutput/{{.OS}}-{{.Arch}}/yothere" -osarch='darwin/amd64 linux/amd64' .
       - run: ls -R
-      # - run: ./myoutput/linux-amd64/yothere
-      - run: ./myoutput/darwin-amd64/yothere
+      - run: ./myoutput/linux-amd64/yothere
+
+      - run: file ./myoutput/darwin-amd64/yothere
       - uses: actions/upload-artifact@v2
         with:
           name: before-compress
@@ -32,17 +33,19 @@ jobs:
 
       - run: brew install upx
       - run: brew ls
+      - run: which upx
+      - run: ls -al "$(which upx)"
       - run: upx --version
 
       - run: cd ./myoutput/darwin-amd64/ && upx yothere && cd -
-      - run: ./myoutput/darwin-amd64/yothere
+      - run: file ./myoutput/darwin-amd64/yothere
       - uses: actions/upload-artifact@v2
         with:
           name: after-compress
           path: ./myoutput/darwin-amd64/yothere
 
       - run: cd ./myoutput/darwin-amd64/ && upx -d yothere && cd -
-      - run: ./myoutput/darwin-amd64/yothere
+      - run: file ./myoutput/darwin-amd64/yothere
       - run: echo "done"
       - uses: actions/upload-artifact@v2
         with:
