--- a/.github/workflows/test-mac-security.yml
+++ b/.github/workflows/test-mac-security.yml
@@ -6,5 +6,5 @@ jobs:
   test:
     runs-on: macos-latest
     steps:
-      - run: wget https://github.com/HarikrishnanBalagopal/move2kube/suites/2169995849/artifacts/44585839
+      - run: wget https://github.com/HarikrishnanBalagopal/yothere/raw/main/my-dist.zip
       - run: ls -R
